--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="preload" href="/logo.svg" as="image" />
+    <link rel="preload" href="/white_logo.svg" as="image" />
     <title>a_ACTIONS - APARATUS</title>
   </head>
   <body>
